Created Graphic components (GraphCom) and Graphics headers and cpp files for basic graphics. Added WM_CREATE, WM_PAINT, and WM_SIZE to list of windows commands program should respond to. Created DrawBKey() as start and drew single "A" block as proof graphics work.

--- a/SuperTyperTrainer/SuperTyperTrainer.vcxproj
+++ b/SuperTyperTrainer/SuperTyperTrainer.vcxproj
@@ -140,11 +140,15 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GraphCom.h" />
+    <ClInclude Include="Graphics.h" />
     <ClInclude Include="Resource.h" />
     <ClInclude Include="SuperTyperTrainer.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="GraphCom.cpp" />
+    <ClCompile Include="Graphics.cpp" />
     <ClCompile Include="SuperTyperTrainer.cpp" />
   </ItemGroup>
   <ItemGroup>
