--- a/SuperTyperTrainer/SuperTyperTrainer.vcxproj.filters
+++ b/SuperTyperTrainer/SuperTyperTrainer.vcxproj.filters
@@ -27,9 +27,21 @@
     <ClInclude Include="SuperTyperTrainer.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Graphics.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="GraphCom.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SuperTyperTrainer.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="Graphics.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="GraphCom.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
