--- a/SuperTyperTrainer/SuperTyperTrainer.vcxproj.filters
+++ b/SuperTyperTrainer/SuperTyperTrainer.vcxproj.filters
@@ -33,6 +33,9 @@
     <ClInclude Include="GraphCom.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="KeyBoard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="SuperTyperTrainer.cpp">
@@ -42,6 +45,9 @@
       <Filter>Source Files</Filter>
     </ClCompile>
     <ClCompile Include="GraphCom.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
+    <ClCompile Include="KeyBoard.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
   </ItemGroup>
